; ModuleID = '/home/carl/AnghaBench/lab/engine/code/server/extr_sv_net_chan.c_SV_Netchan_TransmitNextFragment.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/server/extr_sv_net_chan.c_SV_Netchan_TransmitNextFragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SV_Netchan_TransmitNextFragment(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %12 = call i32 @Netchan_TransmitNextFragment(%struct.TYPE_7__* %11)
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %14 = call i32 @SV_RateMsec(%struct.TYPE_6__* %13)
  store i32 %14, i32* %2, align 4
  br label %27

15:                                               ; preds = %1
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %15
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %22 = call i32 @SV_Netchan_TransmitNextInQueue(%struct.TYPE_6__* %21)
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %24 = call i32 @SV_RateMsec(%struct.TYPE_6__* %23)
  store i32 %24, i32* %2, align 4
  br label %27

25:                                               ; preds = %15
  br label %26

26:                                               ; preds = %25
  store i32 -1, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %20, %9
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @Netchan_TransmitNextFragment(%struct.TYPE_7__*) #1

declare dso_local i32 @SV_RateMsec(%struct.TYPE_6__*) #1

declare dso_local i32 @SV_Netchan_TransmitNextInQueue(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
